<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_albums"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_albums" />
        <item
            android:id="@+id/nav_artists"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_artists" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/title_playlists" />
        <item
            android:id="@+id/nav_songs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_songs" />
    </group>

    <item android:title="@string/title_contacts">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/title_contact_us" />
        </menu>
    </item>

</menu>
