<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    tools:context="io.github.timladenov.musicapplication.AlbumsActivity">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lining_nav_tabs"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="@dimen/lining_nav_tabs"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/backToHome"
            style="@style/TextViewStyle"
            android:text="@string/nav_home" />

        <View
            android:layout_width="@dimen/lining_nav_tabs"
            android:layout_height="match_parent"
            android:background="@android:color/white" />


        <TextView
            android:id="@+id/goToArtists"
            style="@style/TextViewStyle"
            android:text="@string/nav_artists" />

        <View
            android:layout_width="@dimen/lining_nav_tabs"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/goToPlaylists"
            style="@style/TextViewStyle"
            android:text="@string/nav_playlists" />

        <View
            android:layout_width="@dimen/lining_nav_tabs"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/goToSongs"
            style="@style/TextViewStyle"
            android:text="@string/nav_songs" />

        <View
            android:layout_width="@dimen/lining_nav_tabs"
            android:layout_height="match_parent"
            android:background="@android:color/white" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lining_nav_tabs"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/item_padding_5dp"
        android:layout_marginRight="@dimen/item_padding_5dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/item_padding_10dp"
            android:layout_marginTop="@dimen/item_padding_10dp"
            android:background="@android:color/white"
            android:gravity="center"
            android:paddingBottom="@dimen/item_padding_5dp"
            android:paddingTop="@dimen/item_padding_5dp"
            android:text="This activity will present the albums that are available for playing to the user.
            They will be arranged either in alphabetical, most rated, newest or longest play time order.
            This activity contains links to all other activities in the application. Once any link to
            other activity is selected, the user will be redirected to it and the current one will cease with finish() method.
            The navigation menu uses Explicit Intents to do this job, and also the color of the button is changed once selected, to indicate
            to the user the change of its state. No other methods are available to navigate away from this activity, but the nav menu. The back button is blocked."
            android:textColor="@android:color/black"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>
