<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="io.github.timladenov.musicapplication.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <Button
            android:id="@+id/play_button"
            style="@style/PlayerButtonStyle"
            android:layout_centerInParent="true"
            android:background="@drawable/button_state_selector" />

        <Button
            android:id="@+id/pause_button"
            style="@style/PlayerButtonStyle"
            android:layout_toLeftOf="@id/play_button"
            android:layout_toStartOf="@id/play_button"
            android:background="@drawable/button_state_selector_pause" />

        <Button
            android:id="@+id/stop_button"
            style="@style/PlayerButtonStyle"
            android:layout_toRightOf="@id/play_button"
            android:layout_toEndOf="@id/play_button"
            android:background="@drawable/button_state_selector_stop" />

        <Button
            android:id="@+id/next_button"
            style="@style/PlayerButtonStyle"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/button_state_selector_next" />

        <Button
            android:id="@+id/previous_button"
            style="@style/PlayerButtonStyle"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/button_state_selector_previous" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/lining_nav_tabs"
        android:background="@android:color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                style="@style/HomeScreenTextViewTitle"
                android:text="@string/homescreen_title_pop_artists" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_0dp_width"
                android:layout_marginTop="@dimen/item_padding_10dp"
                android:layout_weight="@dimen/item_weight"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                style="@style/HomeScreenTextViewTitle"
                android:text="@string/homescreen_title_pop_albums" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_0dp_width"
                android:layout_marginTop="@dimen/item_padding_10dp"
                android:layout_weight="@dimen/item_weight"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </HorizontalScrollView>

            <TextView
                style="@style/HomeScreenTextViewTitle"
                android:text="@string/homescreen_title_upcoming_albums" />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/item_0dp_width"
                android:layout_marginBottom="@dimen/item_padding_10dp"
                android:layout_marginTop="@dimen/item_padding_10dp"
                android:layout_weight="@dimen/item_weight"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        style="@style/HomeScreenTextView"
                        android:text="@string/homescreen_content_interim_text"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
